--- a/start.html
+++ b/start.html
@@ -51,7 +51,7 @@
             </div>
 
     	</div>
-		<script src="http://localhost:8080/surse/v5/proiect.js" type="module"></script>
+		<script src="surse/v5/proiect.js" type="module"></script>
 		<!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script> -->
 
 	</body>
